# PDI

./: README.md  copy_resources.sh  index.adoc
docs/: _resolução_2.html  convolution.html  decoder.html  dft.html  filestorage.html  histogram.html  homomorphic-filter.html  index.html  labelling.html  pixels.html  points.html
exercicio_1/: CMakeLists.txt  Exercicio.adoc  regions.cpp  switch_regions.cpp
exercicio_10/: CMakeLists.txt  Exercicio.adoc  make_growing_radius_frames.sh  pontilhismo.cpp
exercicio_2/: CMakeLists.txt  Exercicio.adoc  dados.csv  filestorage.cpp  plot_data.py
exercicio_3/: CMakeLists.txt  Exercicio.adoc  decoder.cpp.gpg  encoded_passphrase.png.gpg  encoder.cpp
exercicio_4/: CMakeLists.txt  Exercicio.adoc  labeling.cpp
exercicio_5/: CMakeLists.txt  Exercicio.adoc  equalizer.cpp  histogram.cpp
exercicio_6/: CMakeLists.txt  Exercicio.adoc  convolution.cpp  depthoffield.cpp
exercicio_7/: README
exercicio_8/: CMakeLists.txt  Exercicio.adoc  dft.cpp
exercicio_9/: CMakeLists.txt  Exercicio.adoc  dftfilter.cpp
toys/: CMakeLists.txt
toys/bitplanes/: bitplanes.cpp
toys/bitplanes/segredo/: backup.csv
utils/: README.md  camera.hpp  utils.hpp
